Tue Feb 24 17:58:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (ripper.c): exec can't work on Windows.

	* ext/ripper/depend (.SUFFIXES): nmake doesn't have .y by default.

	* Makefile.in (id.h): overwrites unconditinally.

Tue Feb 24 13:13:49 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* missing/vsnprintf.c (BSD_vfprintf): ptrdiff_t may be larger than
	  long.

Tue Feb 24 10:49:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_waitpid): last argument was missing.

	* process.c (waitall_each): fixed typo.  a patch from shinichiro.h
	  <shinichiro.hamaji AT gmail.com> at [ruby-dev:38054].

Tue Feb 24 01:22:19 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* bootstraptest/test_thread.rb: fix for environment where fork is not
	  available.

Tue Feb 24 01:19:38 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* thread.c (thread_cleanup_func): unlock all locked mutexes even when
	  forking.  [ruby-core:22269]

Mon Feb 23 14:47:04 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (mv): added description for the case of
	  different partitions.  [ruby-talk:329072]

Sun Feb 22 22:42:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (tr_trans): should recalculate coderange.
	  [ruby-core:22326] (reopened at [ruby-core:22328])

Sun Feb 22 14:33:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (tr_trans): should not be affected by the encoding of
	  replacement unless actually modified.  [ruby-talk:328967]

Fri Feb  6 12:11:24 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (process_options): set initial default_external before -r.

Sun Feb 22 10:43:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (method_missing): should not pop cfp if missing method
	  is method_missing.  [ruby-core:22298]

	* vm_eval.c (rb_raise_method_missing): new function to directly
	  raise NoMethodError.

	* vm_insnhelper.c (vm_call_method): fixed the case method_missing
	  is missing.
